mule-user-guide/v/3.6/security-manager-configuration-reference.adoc
= Security Manager Configuration Reference
:keywords: anypoint studio, esb, security

This page provides details on the elements you configure for the security manager. For more information, see link:/mule-user-guide/v/3.6/configuring-security[Configuring Security].

== Security Manager

The default security manager.

.Attributes of <security-manager...>
[cols="15a,15a,15a,15a,40a",options="header"]
|===
|Name |Type |Required |Default |Description
|id| |no|_muleSecurityManager|ID value
|name| |no|_muleSecurityManager|Name
|===

.Child Elements of <security-manager...>
[width="100%",cols="30a,10a,60a",options="header"]
|===
|Name |Cardinality |Description
|custom-security-provider |0..1 |A custom implementation of SecurityProvider.
|custom-encryption-strategy |0..1 |A custom implementation of EncryptionStrategy.
|secret-key-encryption-strategy |0..1 |Provides secret key-based encryption using JCE.
|password-encryption-strategy |0..1 |Provides password-based encryption using JCE. Users must specify a password and optionally a salt and iteration count as well. The default algorithm is PBEWithMD5AndDES, but users can specify any valid algorithm supported by JCE.
|===

== Custom Security Provider

A custom implementation of SecurityProvider.

.Attributes of <custom-security-provider...>
[cols="30a,70a",options="header"]
|===
|Name |Description
|name |Name

*Type*: name (no spaces) +
*Required*: yes +
*Default*: none
|provider-ref|The name of the security provider to use.

*Type*: string +
*Required*: yes +
*Default*: none
|===

.Child Elements of <custom-security-provider...>
[width="100%",cols="30a,10a,60a",options="header"]
|===
|Name |Cardinality |Description
|spring:property |0..* |Spring-style property element for custom configuration.
|===

== Custom Encryption Strategy

A custom implementation of EncryptionStrategy.

.Attributes of <custom-encryption-strategy...>

[cols="30a,70a",options="header"]
|===
|Name |Description
|name |Name

*Type*: name (no spaces) +
*Required*: yes +
*Default*: none
|strategy-ref |A reference to the encryption strategy (which may be a Spring bean that implements the EncryptionStrategy interface).

*Type*: string +
*Required*: yes +
*Default*: none
|===

.Child Elements of <custom-encryption-strategy...>
[width="100%",cols="30a,10a,60a",options="header"]
|===
|Name |Cardinality |Description
|spring:property |0..* | 
|===

== Secret Key Encryption Strategy

Provides secret key-based encryption using JCE.

.Attributes of <secret-key-encryption-strategy...>
[cols="30a,70a",options="header"]
|===
|Name |Description
|name |Name

*Type*: name (no spaces) +
*Required*: yes +
*Default*: none
|key |The key to use. This and the 'keyFactory-ref' attribute are mutually exclusive.

*Type*: string +
*Required*: no +
*Default*: none
|keyFactory-ref |The name of the key factory to use. This should implement the ObjectFactory interface and return a byte array. This and the 'key' attribute are mutually exclusive.

*Type*: string +
*Required*: no +
*Default*: none
|===

No Child Elements of <secret-key-encryption-strategy...>

== Password Encryption Strategy

Provides password-based encryption using JCE. Users must specify a password and optionally a salt and iteration count as well. The default algorithm is PBEWithMD5AndDES, but you can specify any valid algorithm supported by JCE.

.Attributes of <password-encryption-strategy...>
[cols="30a,70a",options="header"]
|===
|Name |Description
|name |Name

*Type*: name (no spaces) +
*Required*: yes +
*Default*: none
|password |The password to use.

*Type*: string +
*Required*: yes +
*Default*: none
|salt |The salt to use (this helps prevent dictionary attacks).

*Type*: string +
*Required*: no +
*Default*: none
|iterationCount |The number of iterations to use.

*Type*: integer +
*Required*: no +
*Default*: none
|===

No Child Elements of <password-encryption-strategy...>

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
